wow-name-checker-chart/templates/mysql-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: mysql
