wow-name-checker-chart/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wow-name-checker-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wow-name-checker
spec:
  hosts:
    - "*"
  gateways:
    - wow-name-checker-gateway
  http:
    - match:
        - uri:
            prefix: /profile
      route:
        - destination:
            host: backend-svc
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-svc
            port:
              number: 80
